Added title page image to config file

--- a/PdfRendering/PdfRendering.properties
+++ b/PdfRendering/PdfRendering.properties
@@ -1,2 +1,3 @@
 FONT_DIR=C:\\Windows\\Fonts
 ADOBE_READER_PATH=C:\\PROGRA~2\\Adobe\\READER~1.0\\Reader\\AcroRd32.exe
+TITLE_IMAGE_PATH=res\\ZHAW_Logo.png
